# mybot_sdk

./: CMakeLists.txt  README.md  package.xml  setup.py
src/mybot_sdk/: mybot_config.yaml  robot_setup.py
